# entropy

./: README.md  dune-project  entropy.opam
examples/addition/: main.ent
examples/minimal/: main.ent
examples/structures/: main.ent
frontend/: compiler.ml  compiler.mli  dune  entropy_compiler.ml  main.ml  main.mli
frontend/thin/: ast.ml  dune  lexer.mll  parser.mly  past.ml
