opam-version: "3.0"
name: "entc"
version: "0.1"
synopsis: "A language for image processing"
description: """
Entropy is a compiled, high-performance, functional programming language designed specifically for image processing, machine vision and edge AI applications,
tailored for both embedded micro-controllers and high-end computing systems.
"""
authors: ["Serhii Shkliaiev (not-forest)"]
maintainer: "sshkliaiev@gmail.com"
license: "MIT"
homepage: "https://github.com/not-forest/entropy"
dev-repo: "git+https://github.com/not-forest/entropy.git"
bug-reports: "https://github.com/yourusername/entropy/issues"
depends: [
    "dune" {>= "2.0.0"}
    "core" {>= "0.12.4"}
    "fmt" {>= "0.8.8"}
    "bisect_ppx" {>= "2.2.0"}
    "ppx_tools_versioned" {>= "5.3.0"}
    "ppx_jane" {>= "v0.12.0"}
    "menhir"{= "20190924"}
]
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
