(executable 
 (name main)
 (public_name entc)
 (modules main)
 (libraries core fmt compiler)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional)
 )
)

(library
 (public_name entropy.compiler)
 (name compiler)
 (modules compiler)
 (libraries core fmt thin)
 (preprocess
  (pps ppx_jane bisect_ppx --conditional)
 )
)

